--- a/src/components/Posts/Post/Post.module.css
+++ b/src/components/Posts/Post/Post.module.css
@@ -7,6 +7,8 @@
   width: 100px;
 }
 .content {
+  display: flex;
+  flex-direction: column;
   margin-left: 20px;
   margin-right: 20px;
   color: slateblue;
@@ -16,5 +18,6 @@
   color: #111;
 }
 .text {
+  flex-grow: 1;
   font-size: 1.4em;
 }
